--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node serverStart.js",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -13,5 +14,9 @@
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0"
     }
 }
