--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
          name: build-artifacts
-         path: ./build 
+         path: .
 
   deploy:
     runs-on: ubuntu-latest
