--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
 
      # Step 5: Save Build Artifacts
       - name: Save Artifacts
+        if: github.ref == 'refs/heads/main'
         uses: actions/upload-artifact@v3
         with:
          name: build-artifacts
